[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/game_over.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 30
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "Fade"
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/Restart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2.1, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Quit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.7, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 570.0
margin_bottom = 994.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 128.0
margin_top = 361.0
margin_right = 412.0
margin_bottom = 602.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 284.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "Defeat"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 131.0
margin_right = 284.0
margin_bottom = 184.0
theme = ExtResource( 2 )
text = "Restart"
__meta__ = {
"_editor_description_": ""
}

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 188.0
margin_right = 284.0
margin_bottom = 241.0
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 2 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]
